--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -377,9 +377,9 @@ You should run autoupdate.], [../../lib/autoconf/general.m4:2688: AC_TRY_LINK is
 ../../lib/m4sugar/m4sh.m4:606: AS_IF is expanded from...
 ../../lib/autoconf/general.m4:2032: AC_CACHE_VAL is expanded from...
 ../../lib/autoconf/general.m4:2053: AC_CACHE_CHECK is expanded from...
-aclocal.m4:69: GLIB_LC_MESSAGES is expanded from...
-aclocal.m4:333: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:433: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:114: GLIB_LC_MESSAGES is expanded from...
+aclocal.m4:378: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:478: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:22: the top level])
 m4trace:configure.ac:22: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LC_MESSAGES])
 m4trace:configure.ac:22: -1- m4_pattern_allow([^HAVE_LC_MESSAGES$])
@@ -396,9 +396,9 @@ You should run autoupdate.], [../../lib/autoconf/general.m4:2688: AC_TRY_LINK is
 ../../lib/m4sugar/m4sh.m4:606: AS_IF is expanded from...
 ../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
 ../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
-aclocal.m4:123: GLIB_WITH_NLS is expanded from...
-aclocal.m4:333: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:433: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:168: GLIB_WITH_NLS is expanded from...
+aclocal.m4:378: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:478: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:22: the top level])
 m4trace:configure.ac:22: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:2688: AC_TRY_LINK is expanded from...
@@ -408,9 +408,9 @@ You should run autoupdate.], [../../lib/autoconf/general.m4:2688: AC_TRY_LINK is
 ../../lib/m4sugar/m4sh.m4:606: AS_IF is expanded from...
 ../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
 ../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
-aclocal.m4:123: GLIB_WITH_NLS is expanded from...
-aclocal.m4:333: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:433: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:168: GLIB_WITH_NLS is expanded from...
+aclocal.m4:378: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:478: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:22: the top level])
 m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_BIND_TEXTDOMAIN_CODESET], [/* Define to 1 if you have the `bind_textdomain_codeset\' function. */
 @%:@undef HAVE_BIND_TEXTDOMAIN_CODESET])
@@ -445,9 +445,9 @@ You should run autoupdate.], [../../lib/autoconf/general.m4:2688: AC_TRY_LINK is
 ../../lib/m4sugar/m4sh.m4:606: AS_IF is expanded from...
 ../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
 ../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
-aclocal.m4:123: GLIB_WITH_NLS is expanded from...
-aclocal.m4:333: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:433: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:168: GLIB_WITH_NLS is expanded from...
+aclocal.m4:378: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:478: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:22: the top level])
 m4trace:configure.ac:22: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_NLS])
 m4trace:configure.ac:22: -1- m4_pattern_allow([^ENABLE_NLS$])
@@ -455,9 +455,9 @@ m4trace:configure.ac:22: -1- AH_OUTPUT([ENABLE_NLS], [/* always defined to indic
 @%:@undef ENABLE_NLS])
 m4trace:configure.ac:22: -1- _m4_warn([obsolete], [The macro `AC_OUTPUT_COMMANDS' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/status.m4:1028: AC_OUTPUT_COMMANDS is expanded from...
-aclocal.m4:123: GLIB_WITH_NLS is expanded from...
-aclocal.m4:333: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:433: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:168: GLIB_WITH_NLS is expanded from...
+aclocal.m4:378: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:478: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:22: the top level])
 m4trace:configure.ac:22: -1- AC_SUBST([CATALOGS])
 m4trace:configure.ac:22: -1- AC_SUBST_TRACE([CATALOGS])
@@ -603,7 +603,7 @@ m4trace:configure.ac:23: -1- AC_SUBST([DATADIRNAME])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([DATADIRNAME])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^DATADIRNAME$])
 m4trace:configure.ac:26: -1- _m4_warn([obsolete], [The macro `AM_PROG_LIBTOOL' is obsolete.
-You should run autoupdate.], [aclocal.m4:756: AM_PROG_LIBTOOL is expanded from...
+You should run autoupdate.], [aclocal.m4:885: AM_PROG_LIBTOOL is expanded from...
 configure.ac:26: the top level])
 m4trace:configure.ac:26: -1- LT_INIT
 m4trace:configure.ac:26: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
@@ -969,111 +969,219 @@ m4trace:configure.ac:73: -1- AH_OUTPUT([GLIB2_26_ENABLED], [/* Define to 1 if yo
 m4trace:configure.ac:73: -1- AC_SUBST([GLIB2_26_DEFINES])
 m4trace:configure.ac:73: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
 m4trace:configure.ac:73: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
-m4trace:configure.ac:119: -1- AC_SUBST([GLIB2_26_CFLAGS])
-m4trace:configure.ac:119: -1- AC_SUBST_TRACE([GLIB2_26_CFLAGS])
-m4trace:configure.ac:119: -1- m4_pattern_allow([^GLIB2_26_CFLAGS$])
-m4trace:configure.ac:119: -1- AC_SUBST([GLIB2_26_LIBS])
-m4trace:configure.ac:119: -1- AC_SUBST_TRACE([GLIB2_26_LIBS])
-m4trace:configure.ac:119: -1- m4_pattern_allow([^GLIB2_26_LIBS$])
-m4trace:configure.ac:119: -1- AC_SUBST([USE_GSETTINGS])
-m4trace:configure.ac:119: -1- AC_SUBST_TRACE([USE_GSETTINGS])
-m4trace:configure.ac:119: -1- m4_pattern_allow([^USE_GSETTINGS$])
-m4trace:configure.ac:119: -1- AC_DEFINE_TRACE_LITERAL([GLIB2_26_ENABLED])
-m4trace:configure.ac:119: -1- m4_pattern_allow([^GLIB2_26_ENABLED$])
-m4trace:configure.ac:119: -1- AH_OUTPUT([GLIB2_26_ENABLED], [/* Define to 1 if you have GLIB 2.26 or higher */
-@%:@undef GLIB2_26_ENABLED])
-m4trace:configure.ac:128: -1- AC_SUBST([GIO_CFLAGS])
-m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_CFLAGS])
-m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_CFLAGS$])
-m4trace:configure.ac:128: -1- AC_SUBST([GIO_LIBS])
-m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_LIBS])
-m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_LIBS$])
-m4trace:configure.ac:128: -1- AC_DEFINE_TRACE_LITERAL([GIO_ENABLED])
-m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_ENABLED$])
-m4trace:configure.ac:128: -1- AH_OUTPUT([GIO_ENABLED], [/* Define to 1 if you have GIO support */
+m4trace:configure.ac:114: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+configure.ac:114: the top level])
+m4trace:configure.ac:123: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+configure.ac:123: the top level])
+m4trace:configure.ac:132: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+configure.ac:132: the top level])
+m4trace:configure.ac:145: -1- AC_SUBST([GCONF_CFLAGS])
+m4trace:configure.ac:145: -1- AC_SUBST_TRACE([GCONF_CFLAGS])
+m4trace:configure.ac:145: -1- m4_pattern_allow([^GCONF_CFLAGS$])
+m4trace:configure.ac:145: -1- AC_SUBST([GCONF_LIBS])
+m4trace:configure.ac:145: -1- AC_SUBST_TRACE([GCONF_LIBS])
+m4trace:configure.ac:145: -1- m4_pattern_allow([^GCONF_LIBS$])
+m4trace:configure.ac:146: -1- AC_SUBST([GLIB2_26_CFLAGS])
+m4trace:configure.ac:146: -1- AC_SUBST_TRACE([GLIB2_26_CFLAGS])
+m4trace:configure.ac:146: -1- m4_pattern_allow([^GLIB2_26_CFLAGS$])
+m4trace:configure.ac:146: -1- AC_SUBST([GLIB2_26_LIBS])
+m4trace:configure.ac:146: -1- AC_SUBST_TRACE([GLIB2_26_LIBS])
+m4trace:configure.ac:146: -1- m4_pattern_allow([^GLIB2_26_LIBS$])
+m4trace:configure.ac:156: -1- AM_CONDITIONAL([GCONF_SCHEMAS_INSTALL], [false])
+m4trace:configure.ac:156: -1- AC_SUBST([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:156: -1- AC_SUBST_TRACE([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:156: -1- m4_pattern_allow([^GCONF_SCHEMAS_INSTALL_TRUE$])
+m4trace:configure.ac:156: -1- AC_SUBST([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:156: -1- AC_SUBST_TRACE([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:156: -1- m4_pattern_allow([^GCONF_SCHEMAS_INSTALL_FALSE$])
+m4trace:configure.ac:156: -1- _AM_SUBST_NOTMAKE([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:156: -1- _AM_SUBST_NOTMAKE([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:158: -1- AC_SUBST([GSETTINGS_RULES])
+m4trace:configure.ac:158: -1- AC_SUBST_TRACE([GSETTINGS_RULES])
+m4trace:configure.ac:158: -1- m4_pattern_allow([^GSETTINGS_RULES$])
+m4trace:configure.ac:165: -1- AC_DEFINE_TRACE_LITERAL([HAVE_GSETTINGS])
+m4trace:configure.ac:165: -1- m4_pattern_allow([^HAVE_GSETTINGS$])
+m4trace:configure.ac:165: -1- AH_OUTPUT([HAVE_GSETTINGS], [/* Define to 1 to use GSettings to store preferences */
+@%:@undef HAVE_GSETTINGS])
+m4trace:configure.ac:166: -1- AM_CONDITIONAL([GCONF_SCHEMAS_INSTALL], [false])
+m4trace:configure.ac:166: -1- AC_SUBST([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:166: -1- AC_SUBST_TRACE([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:166: -1- m4_pattern_allow([^GCONF_SCHEMAS_INSTALL_TRUE$])
+m4trace:configure.ac:166: -1- AC_SUBST([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:166: -1- AC_SUBST_TRACE([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:166: -1- m4_pattern_allow([^GCONF_SCHEMAS_INSTALL_FALSE$])
+m4trace:configure.ac:166: -1- _AM_SUBST_NOTMAKE([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:166: -1- _AM_SUBST_NOTMAKE([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:167: -1- m4_pattern_allow([AM_V_GEN])
+m4trace:configure.ac:167: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+aclocal.m4:505: GLIB_GSETTINGS is expanded from...
+configure.ac:167: the top level])
+m4trace:configure.ac:167: -1- AC_SUBST([GSETTINGS_DISABLE_SCHEMAS_COMPILE])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([GSETTINGS_DISABLE_SCHEMAS_COMPILE])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^GSETTINGS_DISABLE_SCHEMAS_COMPILE$])
+m4trace:configure.ac:167: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^PKG_CONFIG(_PATH)?$])
+m4trace:configure.ac:167: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:167: -1- AC_SUBST([PKG_CONFIG_PATH])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([PKG_CONFIG_PATH])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
+m4trace:configure.ac:167: -1- AC_SUBST([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
+m4trace:configure.ac:167: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:167: -1- AC_SUBST([gsettingsschemadir], [${datadir}/glib-2.0/schemas])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([gsettingsschemadir])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^gsettingsschemadir$])
+m4trace:configure.ac:167: -1- AC_SUBST([GLIB_COMPILE_SCHEMAS])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([GLIB_COMPILE_SCHEMAS])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^GLIB_COMPILE_SCHEMAS$])
+m4trace:configure.ac:167: -1- AC_SUBST([GLIB_COMPILE_SCHEMAS])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([GLIB_COMPILE_SCHEMAS])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^GLIB_COMPILE_SCHEMAS$])
+m4trace:configure.ac:167: -1- AC_SUBST([GSETTINGS_RULES])
+m4trace:configure.ac:167: -1- AC_SUBST_TRACE([GSETTINGS_RULES])
+m4trace:configure.ac:167: -1- m4_pattern_allow([^GSETTINGS_RULES$])
+m4trace:configure.ac:167: -1- _AM_SUBST_NOTMAKE([GSETTINGS_RULES])
+m4trace:configure.ac:174: -1- AC_DEFINE_TRACE_LITERAL([HAVE_GCONF])
+m4trace:configure.ac:174: -1- m4_pattern_allow([^HAVE_GCONF$])
+m4trace:configure.ac:174: -1- AH_OUTPUT([HAVE_GCONF], [/* Define to 1 to use GConf to store preferences */
+@%:@undef HAVE_GCONF])
+m4trace:configure.ac:175: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+aclocal.m4:29: AM_GCONF_SOURCE_2 is expanded from...
+configure.ac:175: the top level])
+m4trace:configure.ac:175: -1- AC_SUBST([GCONF_SCHEMA_CONFIG_SOURCE])
+m4trace:configure.ac:175: -1- AC_SUBST_TRACE([GCONF_SCHEMA_CONFIG_SOURCE])
+m4trace:configure.ac:175: -1- m4_pattern_allow([^GCONF_SCHEMA_CONFIG_SOURCE$])
+m4trace:configure.ac:175: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+aclocal.m4:29: AM_GCONF_SOURCE_2 is expanded from...
+configure.ac:175: the top level])
+m4trace:configure.ac:175: -1- AC_SUBST([GCONF_SCHEMA_FILE_DIR])
+m4trace:configure.ac:175: -1- AC_SUBST_TRACE([GCONF_SCHEMA_FILE_DIR])
+m4trace:configure.ac:175: -1- m4_pattern_allow([^GCONF_SCHEMA_FILE_DIR$])
+m4trace:configure.ac:175: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
+aclocal.m4:29: AM_GCONF_SOURCE_2 is expanded from...
+configure.ac:175: the top level])
+m4trace:configure.ac:175: -1- AM_CONDITIONAL([GCONF_SCHEMAS_INSTALL], [test "$enable_schemas_install" != no])
+m4trace:configure.ac:175: -1- AC_SUBST([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:175: -1- AC_SUBST_TRACE([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:175: -1- m4_pattern_allow([^GCONF_SCHEMAS_INSTALL_TRUE$])
+m4trace:configure.ac:175: -1- AC_SUBST([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:175: -1- AC_SUBST_TRACE([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:175: -1- m4_pattern_allow([^GCONF_SCHEMAS_INSTALL_FALSE$])
+m4trace:configure.ac:175: -1- _AM_SUBST_NOTMAKE([GCONF_SCHEMAS_INSTALL_TRUE])
+m4trace:configure.ac:175: -1- _AM_SUBST_NOTMAKE([GCONF_SCHEMAS_INSTALL_FALSE])
+m4trace:configure.ac:177: -1- AC_SUBST([GSETTINGS_RULES])
+m4trace:configure.ac:177: -1- AC_SUBST_TRACE([GSETTINGS_RULES])
+m4trace:configure.ac:177: -1- m4_pattern_allow([^GSETTINGS_RULES$])
+m4trace:configure.ac:180: -1- AC_SUBST([USE_GCONF])
+m4trace:configure.ac:180: -1- AC_SUBST_TRACE([USE_GCONF])
+m4trace:configure.ac:180: -1- m4_pattern_allow([^USE_GCONF$])
+m4trace:configure.ac:181: -1- AC_SUBST([USE_GSETTINGS])
+m4trace:configure.ac:181: -1- AC_SUBST_TRACE([USE_GSETTINGS])
+m4trace:configure.ac:181: -1- m4_pattern_allow([^USE_GSETTINGS$])
+m4trace:configure.ac:189: -1- AC_SUBST([GIO_CFLAGS])
+m4trace:configure.ac:189: -1- AC_SUBST_TRACE([GIO_CFLAGS])
+m4trace:configure.ac:189: -1- m4_pattern_allow([^GIO_CFLAGS$])
+m4trace:configure.ac:189: -1- AC_SUBST([GIO_LIBS])
+m4trace:configure.ac:189: -1- AC_SUBST_TRACE([GIO_LIBS])
+m4trace:configure.ac:189: -1- m4_pattern_allow([^GIO_LIBS$])
+m4trace:configure.ac:189: -1- AC_DEFINE_TRACE_LITERAL([GIO_ENABLED])
+m4trace:configure.ac:189: -1- m4_pattern_allow([^GIO_ENABLED$])
+m4trace:configure.ac:189: -1- AH_OUTPUT([GIO_ENABLED], [/* Define to 1 if you have GIO support */
 @%:@undef GIO_ENABLED])
-m4trace:configure.ac:128: -1- AC_SUBST([GIO_DEFINES])
-m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_DEFINES])
-m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_DEFINES$])
-m4trace:configure.ac:128: -1- AC_SUBST([GIO_CFLAGS])
-m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_CFLAGS])
-m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_CFLAGS$])
-m4trace:configure.ac:128: -1- AC_SUBST([GIO_LIBS])
-m4trace:configure.ac:128: -1- AC_SUBST_TRACE([GIO_LIBS])
-m4trace:configure.ac:128: -1- m4_pattern_allow([^GIO_LIBS$])
-m4trace:configure.ac:140: -1- AC_SUBST([ALSA_CFLAGS])
-m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
-m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_CFLAGS$])
-m4trace:configure.ac:140: -1- AC_SUBST([ALSA_LIBS])
-m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_LIBS])
-m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_LIBS$])
-m4trace:configure.ac:140: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ASOUNDLIB])
-m4trace:configure.ac:140: -1- m4_pattern_allow([^HAVE_ASOUNDLIB$])
-m4trace:configure.ac:140: -1- AH_OUTPUT([HAVE_ASOUNDLIB], [/* Define to 1 if you have asoundlib development packages */
+m4trace:configure.ac:189: -1- AC_SUBST([GIO_DEFINES])
+m4trace:configure.ac:189: -1- AC_SUBST_TRACE([GIO_DEFINES])
+m4trace:configure.ac:189: -1- m4_pattern_allow([^GIO_DEFINES$])
+m4trace:configure.ac:189: -1- AC_SUBST([GIO_CFLAGS])
+m4trace:configure.ac:189: -1- AC_SUBST_TRACE([GIO_CFLAGS])
+m4trace:configure.ac:189: -1- m4_pattern_allow([^GIO_CFLAGS$])
+m4trace:configure.ac:189: -1- AC_SUBST([GIO_LIBS])
+m4trace:configure.ac:189: -1- AC_SUBST_TRACE([GIO_LIBS])
+m4trace:configure.ac:189: -1- m4_pattern_allow([^GIO_LIBS$])
+m4trace:configure.ac:201: -1- AC_SUBST([ALSA_CFLAGS])
+m4trace:configure.ac:201: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
+m4trace:configure.ac:201: -1- m4_pattern_allow([^ALSA_CFLAGS$])
+m4trace:configure.ac:201: -1- AC_SUBST([ALSA_LIBS])
+m4trace:configure.ac:201: -1- AC_SUBST_TRACE([ALSA_LIBS])
+m4trace:configure.ac:201: -1- m4_pattern_allow([^ALSA_LIBS$])
+m4trace:configure.ac:201: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ASOUNDLIB])
+m4trace:configure.ac:201: -1- m4_pattern_allow([^HAVE_ASOUNDLIB$])
+m4trace:configure.ac:201: -1- AH_OUTPUT([HAVE_ASOUNDLIB], [/* Define to 1 if you have asoundlib development packages */
 @%:@undef HAVE_ASOUNDLIB])
-m4trace:configure.ac:140: -1- AC_SUBST([ALSA_DEFINES])
-m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_DEFINES])
-m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_DEFINES$])
-m4trace:configure.ac:140: -1- AC_SUBST([ALSA_CFLAGS])
-m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
-m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_CFLAGS$])
-m4trace:configure.ac:140: -1- AC_SUBST([ALSA_LIBS])
-m4trace:configure.ac:140: -1- AC_SUBST_TRACE([ALSA_LIBS])
-m4trace:configure.ac:140: -1- m4_pattern_allow([^ALSA_LIBS$])
-m4trace:configure.ac:152: -1- AC_SUBST([PULSE_CFLAGS])
-m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
-m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_CFLAGS$])
-m4trace:configure.ac:152: -1- AC_SUBST([PULSE_LIBS])
-m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_LIBS])
-m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_LIBS$])
-m4trace:configure.ac:152: -1- AC_DEFINE_TRACE_LITERAL([HAVE_PULSEAUDIO])
-m4trace:configure.ac:152: -1- m4_pattern_allow([^HAVE_PULSEAUDIO$])
-m4trace:configure.ac:152: -1- AH_OUTPUT([HAVE_PULSEAUDIO], [/* Define to 1 if you have PulseAudio development packages */
+m4trace:configure.ac:201: -1- AC_SUBST([ALSA_DEFINES])
+m4trace:configure.ac:201: -1- AC_SUBST_TRACE([ALSA_DEFINES])
+m4trace:configure.ac:201: -1- m4_pattern_allow([^ALSA_DEFINES$])
+m4trace:configure.ac:201: -1- AC_SUBST([ALSA_CFLAGS])
+m4trace:configure.ac:201: -1- AC_SUBST_TRACE([ALSA_CFLAGS])
+m4trace:configure.ac:201: -1- m4_pattern_allow([^ALSA_CFLAGS$])
+m4trace:configure.ac:201: -1- AC_SUBST([ALSA_LIBS])
+m4trace:configure.ac:201: -1- AC_SUBST_TRACE([ALSA_LIBS])
+m4trace:configure.ac:201: -1- m4_pattern_allow([^ALSA_LIBS$])
+m4trace:configure.ac:213: -1- AC_SUBST([PULSE_CFLAGS])
+m4trace:configure.ac:213: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
+m4trace:configure.ac:213: -1- m4_pattern_allow([^PULSE_CFLAGS$])
+m4trace:configure.ac:213: -1- AC_SUBST([PULSE_LIBS])
+m4trace:configure.ac:213: -1- AC_SUBST_TRACE([PULSE_LIBS])
+m4trace:configure.ac:213: -1- m4_pattern_allow([^PULSE_LIBS$])
+m4trace:configure.ac:213: -1- AC_DEFINE_TRACE_LITERAL([HAVE_PULSEAUDIO])
+m4trace:configure.ac:213: -1- m4_pattern_allow([^HAVE_PULSEAUDIO$])
+m4trace:configure.ac:213: -1- AH_OUTPUT([HAVE_PULSEAUDIO], [/* Define to 1 if you have PulseAudio development packages */
 @%:@undef HAVE_PULSEAUDIO])
-m4trace:configure.ac:152: -1- AC_SUBST([PULSE_DEFINES])
-m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_DEFINES])
-m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_DEFINES$])
-m4trace:configure.ac:152: -1- AC_SUBST([PULSE_CFLAGS])
-m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
-m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_CFLAGS$])
-m4trace:configure.ac:152: -1- AC_SUBST([PULSE_LIBS])
-m4trace:configure.ac:152: -1- AC_SUBST_TRACE([PULSE_LIBS])
-m4trace:configure.ac:152: -1- m4_pattern_allow([^PULSE_LIBS$])
-m4trace:configure.ac:160: -1- AC_SUBST([GLIB2_26_DEFINES])
-m4trace:configure.ac:160: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
-m4trace:configure.ac:160: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
-m4trace:configure.ac:162: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:213: -1- AC_SUBST([PULSE_DEFINES])
+m4trace:configure.ac:213: -1- AC_SUBST_TRACE([PULSE_DEFINES])
+m4trace:configure.ac:213: -1- m4_pattern_allow([^PULSE_DEFINES$])
+m4trace:configure.ac:213: -1- AC_SUBST([PULSE_CFLAGS])
+m4trace:configure.ac:213: -1- AC_SUBST_TRACE([PULSE_CFLAGS])
+m4trace:configure.ac:213: -1- m4_pattern_allow([^PULSE_CFLAGS$])
+m4trace:configure.ac:213: -1- AC_SUBST([PULSE_LIBS])
+m4trace:configure.ac:213: -1- AC_SUBST_TRACE([PULSE_LIBS])
+m4trace:configure.ac:213: -1- m4_pattern_allow([^PULSE_LIBS$])
+m4trace:configure.ac:221: -1- AC_SUBST([GLIB2_26_DEFINES])
+m4trace:configure.ac:221: -1- AC_SUBST_TRACE([GLIB2_26_DEFINES])
+m4trace:configure.ac:221: -1- m4_pattern_allow([^GLIB2_26_DEFINES$])
+m4trace:configure.ac:223: -1- AC_CONFIG_FILES([
 Makefile
 src/gmtk.pc
 src/gmlib.pc
 src/Makefile
 po/Makefile.in])
-m4trace:configure.ac:162: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:223: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:162: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:162: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:162: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:162: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:162: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:162: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:162: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:162: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:162: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:162: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:162: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:162: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:162: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:223: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:223: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:223: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:223: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:223: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:223: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:223: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:223: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:223: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:223: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:223: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:223: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:223: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
